--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "nodemailer": "^6.10.1",
     "prisma": "^6.10.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "stripe": "^18.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
