--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prisma": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "stripe": "^18.3.0"
   },
   "devDependencies": {
